crates/parser/tests/cases/snapshots/cases__errors__stmt_match1.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_match1), functions::parse_stmt,\n    r#\"match my_enum {\n    mymod::MyS {.., x: x, y: true}  => {\n        return x\n    }\n}\"#)"
---
error: `..` pattern should be the last position in the struct pattern
  ┌─ stmt_match1:2:19
  │
2 │     mymod::MyS {.., x: x, y: true}  => {
  │                   ^ expected symbol `}`, found symbol `,`


