crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_attr.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_attr), functions::parse_stmt, true,\n           \"f.s : u\")"

---
error: Variable declaration must begin with `let`
  ┌─ stmt_vardecl_attr:1:1
  │
1 │ f.s : u
  │ ^^^ invalid variable declaration
  │
  = Example: `let x: u8 = 1`


