crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_missing_type_annotation_2.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_missing_type_annotation_2),\n           functions::parse_stmt, true, \"let x\")"

---
error: failed to parse variable declaration
  ┌─ stmt_vardecl_missing_type_annotation_2:1:5
  │
1 │ let x
  │     ^ Must be followed by type annotation
  │
  = Example: `let x: u8 = 1`


